# DevProd

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  roadmap.md
.do/: app.yaml
.github/workflows/: ci.yml
agents/devprod-workflow/: evidence.md  hypothesis.md  policy-review.md  postmortem.md  remediation.md  retrieval.md  triage.md  workflow-manifest.json
apps/api/: Dockerfile  pyproject.toml
apps/api/devprod_api/: __init__.py  config.py  evaluation.py  exceptions.py  knowledge.py  main.py  models.py  providers.py  repository.py  run_history.py  security.py  workflow.py
apps/api/tests/: conftest.py  test_api.py  test_evaluation.py  test_providers.py
apps/web/: Dockerfile  package.json  tsconfig.json  vitest.config.ts
arena/expected-outcomes/: deployment-breaks-auth-flow.json
arena/incidents/: deployment-breaks-auth-flow.json
arena/rubrics/: default.json
docs/: architecture.md  deployment.md  gradient-ai-usage.md
evals/datasets/: baseline.json
evals/runners/: score_scenarios.py
knowledge/: manifest.json
knowledge/architecture/: catalog-cache-flow.md  checkout-auth.md  event-envelope-contract.md
knowledge/incidents/: auth-rollback.json  cache-ttl-regression.md  dependency-upgrade-worker-failure.md  incident-auth-rollback.md
knowledge/postmortems/: checkout-auth-postmortem.md
knowledge/runbooks/: auth-issuer.md  billing-worker-backlog.md  catalog-cache-latency.md  checkout-key-rotation.md  database-lock-contention.md  search-traffic-spike.md
scripts/: smoke-url.mjs
(+26 files in other folders)
